# dnn

./: README.md
dnn1/: README.md  clean_notebook.ipynb  colab_notebook.ipynb  polecenie.md
dnn1/dataloading/: __init__.py  augmentation.py  dataset.py
dnn1/metrics/: __init__.py  metrics_classes.py  metrics_functions.py
dnn1/model/: __init__.py  model.py  utils.py
dnn1/plot/: __init__.py  plot.py
dnn1/trainer/: __init__.py  loss.py  trainer.py
dnn2/: .gitignore  README.md  dnn_hw2_JPniewski.ipynb  make_submission.sh  pyproject.toml
dnn3/: .gitignore  README.md  homework.ipynb  make_submission.sh
dnn3/src/: __init__.py  attention.py  moe.py  rope.py  swiglu.py  transformer.py
dnn3/test/: test_attention.py  test_moe.py  test_rope.py  test_transformer.py
dnn4/: .gitignore  README.md  exploration.ipynb  homework.ipynb  make_submission.sh  pyproject.toml
